Fix colour contrast issues
Resolves #8

--- a/css/style.css
+++ b/css/style.css
@@ -105,9 +105,9 @@ figcaption {
     text-decoration: none;
     display: inline-block;
     padding: 0.75em 0.75em;
-    border: 1px solid hsl(198, 100%, 44%);
+    border: 1px solid hsl(198, 100%, 35%);
     border-radius: 7px;
-    color: hsl(198, 100%, 44%);
+    color: hsl(198, 100%, 35%);
     font-style: normal;
     transition: color 0.2s, border-color 0.2s;
 }
@@ -115,8 +115,8 @@ figcaption {
 .button:hover,
 .button:focus,
 .button:active {
-    color: hsl(198, 100%, 30%);
-    border-color: hsl(198, 100%, 30%);
+    color: hsl(198, 100%, 25%);
+    border-color: hsl(198, 100%, 25%);
 }
 
 /**
@@ -129,14 +129,14 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 a {
-    color: hsl(198, 100%, 44%);
+    color: hsl(198, 100%, 35%);
     transition: color 0.2s;
 }
 
 a:hover,
 a:focus,
 a:active {
-    color: hsl(198, 100%, 35%);
+    color: hsl(198, 100%, 25%);
 }
 
 b, strong {
